--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 
 body {
     font-family: "Poppins", sans-serif;
+    
+    
 }
 
 html {
@@ -280,12 +282,14 @@ section {
     bottom:2.5rem;
 }
 .details-container{
-    padding:1rem;
+    padding:1.5rem;
     flex:1;
     background:white;
     border-radius:2rem;
     border:rgb(53,53,53) 0.1rem solid;
     border-color:rgb(163, 163, 163);
+    text-align: center;
+    
     
 }
 .section-container{
@@ -298,3 +302,131 @@ section {
     width:400px;
     margin:auto 0
 }
+
+#experience{
+    position:relative;
+}
+.experience-sub-title{
+    color:rgb(85, 85, 85);
+    font-weight: 600;
+    font-size:1.75rem;
+    margin-bottom:2rem;
+}
+.experience-details-container{
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+}
+.article-container{
+    display:flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    align-items: center; /* Ensures vertical alignment */
+    gap: 0.75rem; /* Adds spacing between the icon and text */
+    width: 12rem; /* Adjust as needed */
+    flex-shrink: 0; /* Prevents shrinking */
+}
+
+
+article .icon{
+    cursor:default;
+}
+
+article h3{
+    white-space: nowrap;
+    font-weight: bold;
+}
+
+#projects{
+    position:relative;
+}
+.color-container{
+    border-color:rgb(163, 163, 163);
+    background:rgb(250,250,250);
+
+}
+.project-img{
+    border-radius:2rem;
+    width:90%;
+    height:90%;
+}
+.project-title{
+    margin: 1rem;
+    color:black;
+
+}
+.project-btn{
+    color:black;
+    border-color:rgb(163, 163, 163);
+}
+
+#contact{
+    display:flex;
+    justify-content: center;
+    flex-direction:column;
+    height:70vh;
+}
+
+.contact-info-upper-container{
+    display:flex;
+    justify-content: center;
+    border-radius:2rem;
+    border:rgb(53,53,53) 0.1rem solid;
+    border-color:rgb(163,163,163);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    gap:0.5rem;
+    margin:1rem;
+
+}
+.contact-info-container p{
+    font-size:larger;
+}
+
+.contact-icon{
+    cursor: default;
+}
+.email-icon{
+    height:2.5rem;
+}
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 4px;
+  }
+
+
+
