--- a/style.css
+++ b/style.css
@@ -259,10 +259,11 @@ section {
     position:relative;
 }
 
-.about-container{
-    gap:2rem;
+.about-containers{
+    
+    gap: 2rem;
     margin-bottom: 2rem;
-    margin-top:2rem;
+    margin-top: 2rem;
 }
 
 .about-details-container{
@@ -270,7 +271,7 @@ section {
     flex-direction:column;
 }
 
-.about-container, .about-details-container{
+.about-containers, .about-details-container{
     display: flex;
 }
 .about-pic{
@@ -427,6 +428,82 @@ footer p {
     padding: 20px;
     border-radius: 4px;
   }
+
+  .gallery {
+    max-width: 1200px;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 24px;
+    padding: 0 20px;
+  }
+
+  .card {
+    position: relative;
+    overflow: hidden;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height:80%;
+  }
+
+  .card img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 12px;
+    transition: transform 0.3s ease;
+  }
+
+  .card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.6);
+  }
+
+  .card:hover img {
+    transform: scale(1.05);
+  }
+
+
+  .lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.85);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  }
+
+  .lightbox.active {
+    display: flex;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 28px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1001;
+    transition: color 0.3s;
+  }
+
+  .close-btn:hover {
+    color: #f00;
+  }
+
 
 
 
