--- a/docs/style.css
+++ b/docs/style.css
@@ -174,10 +174,25 @@ section {
     gap: 5rem;
     height:80vh;
 }
-.section_pic-container{
+.section_pic-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.section_pic-container img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%; /* makes the image a circle */
+}
+.section_pic-container2{
     display: flex;
     height: 400px;
-    width:400px;
+    width:600px;
     margin: auto 0;
 }
 .section_text{
